--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
 
 	<div style="text-align:center">
-	    <img src="http://movieqa.cs.toronto.edu/static/images/logos/mit.png" width="100%" style="max-width:150px;" alt="MIT">
+	    <img src="images/logos/mit.jpeg" width="100%" style="max-width:150px;" alt="MIT">
 	    <img src="images/logos/inria.png" width="100%" style="max-width:150px;" alt="INRIA">
 	    <img src="images/logos/adobe.png" width="100%" style="max-width:150px;" alt="Adobe">
 	</div>
