--- a/data_analysis/index.html
+++ b/data_analysis/index.html
@@ -45,43 +45,35 @@
 
 
   <hr class="half-rule"/>
-  <section id="about">
-      <div class="container">
+  <section id="overview">
+    <div class="container">
     <div class="row">
         <div class="col-md-12 mx-auto">
+          <br>
           <h3>Basic Statistics</h3>
             <ul>
+              <br>
               <li>Total videos: 6,594</li>
               <li>Training videos: 5,297</li>
               <li>Validation videos: 635</li>
               <li>Test videos: 608</li>
               <li>Unseen test videos: 54</li>
+              <br>
+              <hr />
+              <br>
+              <li>Total triplets: 653+54</li>
+              <li>Total actions: 193 </li>
+              <li>Total objects: 94</li>
+              <li>Videos per triplet: </li>
             </ul>
-            <hr>
         </div>
     </div>
-
-      </div>
+    </div>
 
   </section>
 
 
 
-
-  <div style="text-align:center">
-      <img src="../images/logos/mit.jpeg" width="100%" style="max-width:150px;" alt="MIT">
-      <img src="../images/logos/inria.png" width="100%" style="max-width:150px;" alt="INRIA">
-      <img src="../images/logos/adobe.png" width="100%" style="max-width:150px;" alt="Adobe">
-  </div>
-
-  <br>
-  <hr class="half-rule"/>
-  <section id="contact">
-      <div class="container">
-    <span class=titlesec>Contact</span><br>
-    Reach out to <a href="mailto:xavierpuig@csail.mit.edu">lishuang@mit.edu</a> for questions, suggestions, and feedback.
-      </div>
-  </section>
 
   <!-- Footer -->
   <footer class="py-3 bg-dark">
