--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
 		<div class="collapse navbar-collapse" id="navbarResponsive">
 		    <ul class="navbar-nav ml-auto">
 			<li class="nav-item">
+			    <a class="nav-link js-scroll-trigger" href="data_analysis/index.html">Download</a>
+			</li>
+			<li class="nav-item">
 			    <a class="nav-link js-scroll-trigger" href="data_analysis/index.html">Data Analysis</a>
 			</li>
 			<li class="nav-item">
@@ -69,7 +72,6 @@
 			</span>
 		    </div>
 		</div>
-
 	    </div>
 
 	</section>
@@ -166,7 +168,7 @@
 	<section id="contact">
 	    <div class="container">
 		<span class=titlesec>Contact</span><br>
-		Reach out to <a href="mailto:xavierpuig@csail.mit.edu">lishuang@mit.edu</a> for questions, suggestions, and feedback.
+		Reach out to <a href="mailto:lishuang@mit.edu">lishuang@mit.edu</a> for questions, suggestions, and feedback.
 	    </div>
 	</section>
 
