--- a/data_download.html
+++ b/data_download.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <html lang="en">
-    <head>
+  <head>
   <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -10,36 +10,37 @@
   <title>VHICO</title>
 
   <!-- Bootstrap core CSS -->
-  <link href="../vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
+  <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <!-- Custom styles for this template -->
 
 
-  <link href="../css/scrolling-nav.css" rel="stylesheet">
-  <link href="../css/style.css" rel="author stylesheet">
-    </head>
+  <link href="css/scrolling-nav.css" rel="stylesheet">
+  <link href="css/style.css" rel="author stylesheet">
+
+  
+  </head>
 
     <body id="page-top">
 
   <!-- Navigation -->
   <nav class="navbar navbar-expand-md navbar-dark fixed-top scrolled" id="mainNav">
       <div class="container bar-container">
-    <a class="navbar-brand js-scroll-trigger" href="../index.html">VHICO Dataset</a>
+    <a class="navbar-brand js-scroll-trigger" href="index.html">VHICO Dataset</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
-      <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="data_analysis/index.html">Overview</a>
-      </li>
-      <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="https://github.com/xavierpuigf/virtualhome">GitHub</a>
-      </li>
+          <li class="nav-item"><a class="nav-link js-scroll-trigger" href="data_analysis.html">Data Analysis</a></li>
+          <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://github.com/ShuangLI59/weakly-supervised-human-object-detection-video">GitHub</a></li>
         </ul>
     </div>
       </div>
   </nav>
+
+
+
 
 
 
@@ -50,27 +51,18 @@
     <div class="row">
         <div class="col-md-12 mx-auto">
           <br>
-          <h3>Basic Statistics</h3>
+          <h3>Download</h3>
             <ul>
               <br>
-              <li>Total videos: 6,594</li>
-              <li>Training videos: 5,297</li>
-              <li>Validation videos: 635</li>
-              <li>Test videos: 608</li>
-              <li>Unseen test videos: 54</li>
-              <br>
-              <hr />
-              <br>
-              <li>Total triplets: 653+54</li>
-              <li>Total actions: 193 </li>
-              <li>Total objects: 94</li>
-              <li>Videos per triplet: </li>
+              <li class="nav-item"><a class="nav-link js-scroll-trigger" href="">Download videos</a></li>
+              <li class="nav-item"><a class="nav-link js-scroll-trigger" href="">Download human-object-interaction labels</a></li>
+              <li class="nav-item"><a class="nav-link js-scroll-trigger" href="">Triplet list</a></li>
             </ul>
         </div>
     </div>
     </div>
-
   </section>
+
 
 
 
