--- a/index.html
+++ b/index.html
@@ -30,15 +30,9 @@
 		</button>
 		<div class="collapse navbar-collapse" id="navbarResponsive">
 		    <ul class="navbar-nav ml-auto">
-			<li class="nav-item">
-			    <a class="nav-link js-scroll-trigger" href="data_analysis/index.html">Download</a>
-			</li>
-			<li class="nav-item">
-			    <a class="nav-link js-scroll-trigger" href="data_analysis/index.html">Data Analysis</a>
-			</li>
-			<li class="nav-item">
-			    <a class="nav-link js-scroll-trigger" href="https://github.com/xavierpuigf/virtualhome">GitHub</a>
-			</li>
+			<li class="nav-item"><a class="nav-link js-scroll-trigger" href="data_download.html">Download</a></li>
+			<li class="nav-item"><a class="nav-link js-scroll-trigger" href="data_analysis.html">Data Analysis</a></li>
+			<li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://github.com/ShuangLI59/weakly-supervised-human-object-detection-video">GitHub</a></li>
 		    </ul>
 		</div>
 	    </div>
