--- a/data_analysis.html
+++ b/data_analysis.html
@@ -56,20 +56,20 @@
         <div class="col-md-12 mx-auto">
           <br>
           <h3>Basic Statistics</h3>
-            <ul>
+            <ul class="list-styled">
               <br>
-              <li>Total videos: 6,594</li>
-              <li>Training videos: 5,297</li>
-              <li>Validation videos: 635</li>
-              <li>Test videos: 608</li>
-              <li>Unseen test videos: 54</li>
+              <li>&#9642; Total videos: 6,594</li>
+              <li>&#9642; Training videos: 5,297</li>
+              <li>&#9642; Validation videos: 635</li>
+              <li>&#9642; Test videos: 608</li>
+              <li>&#9642; Unseen test videos: 54</li>
               <br>
               <hr />
               <br>
-              <li>Total triplets: 653+54</li>
-              <li>Total actions: 193 </li>
-              <li>Total objects: 94</li>
-              <li>Videos per triplet: </li>
+              <li>&#9642; Total triplets: 653+54</li>
+              <li>&#9642; Total actions: 193 </li>
+              <li>&#9642; Total objects: 94</li>
+              <li>&#9642; Videos per triplet: </li>
             </ul>
         </div>
     </div>
