--- a/data_download.html
+++ b/data_download.html
@@ -52,11 +52,11 @@
         <div class="col-md-12 mx-auto">
           <br>
           <h3>Download</h3>
-            <ul>
+            <ul class="list-styled">
               <br>
-              <li class="nav-item"><a class="nav-link js-scroll-trigger" href="">Download videos</a></li>
-              <li class="nav-item"><a class="nav-link js-scroll-trigger" href="">Download human-object-interaction labels</a></li>
-              <li class="nav-item"><a class="nav-link js-scroll-trigger" href="">Triplet list</a></li>
+              <li class="nav-item"><a class="nav-link js-scroll-trigger" href="">&#9642; Download videos</a></li>
+              <li class="nav-item"><a class="nav-link js-scroll-trigger" href="">&#9642; Download human-object-interaction labels</a></li>
+              <li class="nav-item"><a class="nav-link js-scroll-trigger" href="">&#9642; Triplet list</a></li>
             </ul>
         </div>
     </div>
