--- a/data_download.html
+++ b/data_download.html
@@ -57,6 +57,8 @@
               <li class="nav-item"><a class="nav-link js-scroll-trigger" href="">&#9642; Download videos</a></li>
               <li class="nav-item"><a class="nav-link js-scroll-trigger" href="">&#9642; Download human-object-interaction labels</a></li>
               <li class="nav-item"><a class="nav-link js-scroll-trigger" href="">&#9642; Triplet list</a></li>
+              <li class="nav-item"><a class="nav-link js-scroll-trigger" href="">&#9642; Action list</a></li>
+              <li class="nav-item"><a class="nav-link js-scroll-trigger" href="">&#9642; Object list</a></li>
             </ul>
         </div>
     </div>
