--- a/data_analysis.html
+++ b/data_analysis.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
 <html lang="en">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.js"></script>
   <head>
   <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
   <meta charset="utf-8">
@@ -90,7 +91,9 @@
 
 
               <h3>Sentence Objects per Image</h3>
-              <div data-histogram data-color="#B3626D" data-src="objects_per_image_statistics" data-maxbins data-cap="60" data-xlabel="Num objects in image"></div>
+                  <div style="width:75%;">
+                    <canvas id="sentenceObject" width="400" height="400"></canvas>
+                  </div>
 
 
 
@@ -175,6 +178,45 @@ function gtag(){dataLayer.push(arguments);}
 gtag('js', new Date());
 
 gtag('config', 'UA-117331227-1');
+    </script>
+    <script>
+      var ctx = document.getElementById("sentenceObject").getContext('2d');
+      var myChart = new Chart(ctx, {
+        type: 'horizontalBar',
+        data: {
+          labels: ["Red", "Blue", "Yellow", "Green", "Purple", "Orange"],
+          datasets: [{
+            label: '# of Votes',
+            data: [12, 19, 3, 5, 2, 3],
+            backgroundColor: [
+              'rgba(255, 99, 132, 0.2)',
+              'rgba(54, 162, 235, 0.2)',
+              'rgba(255, 206, 86, 0.2)',
+              'rgba(75, 192, 192, 0.2)',
+              'rgba(153, 102, 255, 0.2)',
+              'rgba(255, 159, 64, 0.2)'
+            ],
+            borderColor: [
+              'rgba(255,99,132,1)',
+              'rgba(54, 162, 235, 1)',
+              'rgba(255, 206, 86, 1)',
+              'rgba(75, 192, 192, 1)',
+              'rgba(153, 102, 255, 1)',
+              'rgba(255, 159, 64, 1)'
+            ],
+            borderWidth: 1
+          }]
+        },
+        options: {
+          scales: {
+            yAxes: [{
+              ticks: {
+                beginAtZero: true
+              }
+            }]
+          }
+        }
+      });
     </script>
 
 </html>
