--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		    <ul class="navbar-nav ml-auto">
 			<li class="nav-item"><a class="nav-link js-scroll-trigger" href="data_download.html">Download</a></li>
 			<li class="nav-item"><a class="nav-link js-scroll-trigger" href="data_analysis.html">Data Analysis</a></li>
-			<li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://github.com/ShuangLI59/weakly-supervised-human-object-detection-video">GitHub</a></li>
+			<li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://github.com/ShuangLI59/weakly-supervised-human-object-detection-video">Code</a></li>
 		    </ul>
 		</div>
 	    </div>
@@ -90,7 +90,10 @@
 				<p class="title_paper"> Weakly Supervised Human and Object Detection via Spatiotemporal Interactions </p>
 				Shuang Li, Yilun Du, Antonio Torralba, Josef Sivic, Bryan Russell
 				<br>
-				<a href="./paper/virtualhome.pdf"> Link paper</a>
+				<a href="./paper/virtualhome.pdf"> Paper</a> &nbsp;&nbsp;
+				<a href="https://shuangli-project.github.io/VHICO-Dataset/"> Dataset</a> &nbsp;&nbsp;
+				<a href="https://shuangli-project.github.io/weakly-supervised-human-object-detection-video/"> Project</a> &nbsp;&nbsp;
+				<a href="https://github.com/ShuangLI59/weakly-supervised-human-object-detection-video"> PyTorch Code</a>
 				<br>
 				<em> IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2021. (In submission) </em><br>
 			    </div>
