--- a/data_example.html
+++ b/data_example.html
@@ -48,23 +48,16 @@
 
 
   <hr class="half-rule"/>
-  <section id="overview">
-    <div class="container">
-    <div class="row">
-        <div class="col-md-12 mx-auto">
-          <br>
-          <h3>Download</h3>
-            <ul class="list-styled">
-              <br>
-              <li class="nav-item"><a class="nav-link js-scroll-trigger" href="">&#9642; Download videos</a></li>
-              <li class="nav-item"><a class="nav-link js-scroll-trigger" href="">&#9642; Download human-object-interaction labels</a></li>
-              <li class="nav-item"><a class="nav-link js-scroll-trigger" href="">&#9642; Triplet list</a></li>
-              <li class="nav-item"><a class="nav-link js-scroll-trigger" href="">&#9642; Action list</a></li>
-              <li class="nav-item"><a class="nav-link js-scroll-trigger" href="">&#9642; Object list</a></li>
-            </ul>
-        </div>
-    </div>
-    </div>
+  <section id="examples">
+    <div id="wrapper"> 
+    <video id="home1" width="400" height="300" poster="images/video.jpg" controls="controls" preload="none"> 
+        <source type="video/mp4" src="images/stories/home1.mp4" /> 
+    </video>
+    <video id="home2" width="400" height="300" poster="images/video.jpg" controls="controls" preload="none"> 
+        <source type="video/mp4" src="images/stories/home2.mp4" /> 
+    </video>
+    <div class="clear"></div> 
+  </div>
   </section>
 
 
