--- a/data_example.html
+++ b/data_example.html
@@ -46,19 +46,32 @@
 
 
 
-
   <hr class="half-rule"/>
   <section id="examples">
-    <div id="wrapper"> 
-    <video id="home1" width="400" height="300" poster="images/video.jpg" controls="controls" preload="none"> 
-        <source type="video/mp4" src="images/stories/home1.mp4" /> 
-    </video>
-    <video id="home2" width="400" height="300" poster="images/video.jpg" controls="controls" preload="none"> 
-        <source type="video/mp4" src="images/stories/home2.mp4" /> 
-    </video>
-    <div class="clear"></div> 
-  </div>
+    <div class="container">
+        <table align="center">
+          <tr>
+              <td>
+                <div style="text-align: center"><p>assembling car</p></div>
+                <video id="video" width="500" height="450" controls>
+                  <source src="videos/test/assembling___car/getty-factory-workers-assembling-car-on-production-line-samut-prakan-bang-video-id102325353_9.mp4" type="video/mp4" />
+                </video>
+              </th>
+
+              <td>
+                <div style="text-align: center"><p>washing bike</p></div>
+                <video id="video" width="500" height="450" controls>
+                  <source src="videos/test/washing___bike/yt-KcM4de_YpiU_116.mp4" type="video/mp4" />
+                </video>
+              </th>
+          </tr>
+          
+      </table>
+
+    </div>
   </section>
+
+
 
 
 
