--- a/data_analysis.html
+++ b/data_analysis.html
@@ -42,24 +42,16 @@
     </div>
   </nav>
 
-
-  <section class="subnav">
-    <nav class="navbar-expand-sm navbar-light" id="subNav" role="sub">
-      <div class="container bar-container">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item"><a class="nav-link js-scroll-trigger active" href="javascript:;" onClick="showOverview();">Overview</a></li>
-            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="javascript:;"  onClick="showTriplet();">Triplets</a></li>
-            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="javascript:;" onClick="showAction();">Actions</a></li>
-            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="javascript:;" onClick="showObject();">Objects</a></li>
-          </ul>
-      </div>
-    </nav>
-  </section>
-
+  <section class="head">
+  <ul class="nav nav-tabs" role="tablist">
+    <li class="nav-item"><a class="nav-link js-scroll-trigger active overview-button" href="javascript:;" onClick="showOverview();">Overview</a></li>
+    <li class="nav-item"><a class="nav-link js-scroll-trigger triplets-button" href="javascript:;"  onClick="showTriplet();">Triplets</a></li>
+    <li class="nav-item"><a class="nav-link js-scroll-trigger actions-button" href="javascript:;" onClick="showAction();">Actions</a></li>
+    <li class="nav-item"><a class="nav-link js-scroll-trigger objects-button" href="javascript:;" onClick="showObject();">Objects</a></li>
+  </ul>
   
   <hr class="half-rule"/>
-  <section class="overview">
-    <div class="container">
+    <div class="container overview">
     <div class="row">
         <div class="col-md-12 mx-auto">
           <br>
@@ -120,13 +112,11 @@
         </div>
     </div>
     </div>
-  </section>
 
 
 
 <!-- ------------------------------------------------------------------------------------------------------------------------------------------------ -->  
-  <section class="triplets" style="display:none">
-    <div class="container">
+    <div class="container triplets" style="display:none">
     <div class="row">
         <div class="col-md-12 mx-auto">
           <br>
@@ -137,11 +127,9 @@
         </div>
     </div>
     </div>
-  </section>
 
 
-  <section class="triplets" style="display:none">
-    <div class="container">
+    <div class="container triplets" style="display:none">
     <div class="row">
         <div class="col-md-12 mx-auto">
           <br>
@@ -152,12 +140,10 @@
         </div>
     </div>
     </div>
-  </section>
 
 
   
-  <section class="triplets" style="display:none">
-    <div class="container">
+    <div class="container triplets" style="display:none">
     <div class="row">
         <div class="col-md-12 mx-auto">
           <br>
@@ -168,12 +154,10 @@
         </div>
     </div>
     </div>
-  </section>
 
 
   
-  <section class="triplets" style="display:none">
-    <div class="container">
+    <div class="container triplets" style="display:none">
     <div class="row">
         <div class="col-md-12 mx-auto">
           <br>
@@ -184,12 +168,10 @@
         </div>
     </div>
     </div>
-  </section>
 
 
   
-  <section class="triplets" style="display:none">
-    <div class="container">
+    <div class="container triplets" style="display:none">
     <div class="row">
         <div class="col-md-12 mx-auto">
           <br>
@@ -200,15 +182,13 @@
         </div>
     </div>
     </div>
-  </section>
 
 
 
 
 <!-- ------------------------------------------------------------------------------------------------------------------------------------------------ -->
 
-  <section class="actions" style="display:none">
-    <div class="container">
+    <div class="container actions" style="display:none">
     <div class="row">
         <div class="col-md-12 mx-auto">
           <br>
@@ -219,11 +199,9 @@
         </div>
     </div>
     </div>
-  </section>
 
 
-  <section class="actions" style="display:none">
-    <div class="container">
+    <div class="container actions" style="display:none">
     <div class="row">
         <div class="col-md-12 mx-auto">
           <br>
@@ -234,11 +212,9 @@
         </div>
     </div>
     </div>
-  </section>
 
 
-  <section class="actions" style="display:none">
-    <div class="container">
+    <div class="container actions" style="display:none">
     <div class="row">
         <div class="col-md-12 mx-auto">
           <br>
@@ -249,11 +225,9 @@
         </div>
     </div>
     </div>
-  </section>
 
 
-  <section class="actions" style="display:none">
-    <div class="container">
+    <div class="container actions" style="display:none">
     <div class="row">
         <div class="col-md-12 mx-auto">
           <br>
@@ -264,11 +238,9 @@
         </div>
     </div>
     </div>
-  </section>
 
 
-  <section class="actions" style="display:none">
-    <div class="container">
+    <div class="container actions" style="display:none">
     <div class="row">
         <div class="col-md-12 mx-auto">
           <br>
@@ -279,7 +251,6 @@
         </div>
     </div>
     </div>
-  </section>
 
 
 
@@ -287,8 +258,7 @@
 
   <!-- ------------------------------------------------------------------------------------------------------------------------------------------------ -->
   
-  <section class="objects" style="display:none">
-    <div class="container">
+    <div class="container objects" style="display:none">
     <div class="row">
         <div class="col-md-12 mx-auto">
           <br>
@@ -299,11 +269,9 @@
         </div>
     </div>
     </div>
-  </section>
 
 
-  <section class="objects" style="display:none">
-    <div class="container">
+    <div class="container objects" style="display:none">
     <div class="row">
         <div class="col-md-12 mx-auto">
           <br>
@@ -314,11 +282,9 @@
         </div>
     </div>
     </div>
-  </section>
 
 
-  <section class="objects" style="display:none">
-    <div class="container">
+    <div class="container objects" style="display:none">
     <div class="row">
         <div class="col-md-12 mx-auto">
           <br>
@@ -329,11 +295,9 @@
         </div>
     </div>
     </div>
-  </section>
 
 
-  <section class="objects" style="display:none">
-    <div class="container">
+    <div class="container objects" style="display:none">
     <div class="row">
         <div class="col-md-12 mx-auto">
           <br>
@@ -344,11 +308,9 @@
         </div>
     </div>
     </div>
-  </section>
 
 
-  <section class="objects" style="display:none">
-    <div class="container">
+    <div class="container objects" style="display:none">
     <div class="row">
         <div class="col-md-12 mx-auto">
           <br>
@@ -888,6 +850,10 @@ gtag('config', 'UA-117331227-1');
           $('.triplets').hide();
           $('.objects').hide();
           $('.actions').hide();
+          $('.overview-button').addClass('active');
+          $('.triplets-button').removeClass('active');
+          $('.actions-button').removeClass('active');
+          $('.objects-button').removeClass('active');
       }
 
       function showTriplet() {
@@ -895,6 +861,10 @@ gtag('config', 'UA-117331227-1');
           $('.triplets').show();
           $('.objects').hide();
           $('.actions').hide();
+          $('.overview-button').removeClass('active');
+          $('.triplets-button').addClass('active');
+          $('.actions-button').removeClass('active');
+          $('.objects-button').removeClass('active');
       }
 
       function showObject() {
@@ -902,6 +872,10 @@ gtag('config', 'UA-117331227-1');
           $('.triplets').hide();
           $('.objects').show();
           $('.actions').hide();
+          $('.overview-button').removeClass('active');
+          $('.triplets-button').removeClass('active');
+          $('.actions-button').removeClass('active');
+          $('.objects-button').addClass('active');
       }
 
       function showAction() {
@@ -909,12 +883,12 @@ gtag('config', 'UA-117331227-1');
           $('.triplets').hide();
           $('.objects').hide();
           $('.actions').show();
+          $('.overview-button').removeClass('active');
+          $('.triplets-button').removeClass('active');
+          $('.actions-button').addClass('active');
+          $('.objects-button').removeClass('active');
       }
 
-      // $(".overview > .triplets").click(function(){
-      //   $(".overview > .triplets").removeClass("active");
-      //   $(this).addClass("active");
-      // });
 
 
     </script>
