--- a/data_analysis.html
+++ b/data_analysis.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
-  <title>VHICO</title>
+  <title>V-HICO</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
@@ -27,7 +27,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-md navbar-dark fixed-top scrolled" id="mainNav" role="main">
     <div class="container bar-container">
-    <a class="navbar-brand js-scroll-trigger" href="index.html">VHICO Dataset</a>
+    <a class="navbar-brand js-scroll-trigger" href="index.html">V-HICO Dataset</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
