--- a/index.html
+++ b/index.html
@@ -30,10 +30,13 @@
 		</button>
 		<div class="collapse navbar-collapse" id="navbarResponsive">
 		    <ul class="navbar-nav ml-auto">
-			<li class="nav-item"><a class="nav-link js-scroll-trigger" href="data_download.html">Download</a></li>
+		    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
+		    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#paper">Paper</a></li>
 			<li class="nav-item"><a class="nav-link js-scroll-trigger" href="data_analysis.html">Data Analysis</a></li>
+			<li class="nav-item"><a class="nav-link js-scroll-trigger" href="data_download.html">Download</a></li>
 			<li class="nav-item"><a class="nav-link js-scroll-trigger" href="data_example.html">Explore</a></li>
 			<li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://github.com/ShuangLI59/weakly-supervised-human-object-detection-video">Code</a></li>
+			<li class="nav-item"><a class="nav-link js-scroll-trigger" href="index.html#team">Team</a></li>
 		    </ul>
 		</div>
 	    </div>
@@ -75,7 +78,7 @@
 
 
 	<hr class="half-rule"/>
-	<section class="">
+	<section id="paper">
 	    <div class="container" id="models">
 		<div class="row">
 		    <div class="col-md-12 mx-auto">
