--- a/data_example.html
+++ b/data_example.html
@@ -32,10 +32,13 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item"><a class="nav-link js-scroll-trigger" href="data_download.html">Download</a></li>
+          <li class="nav-item"><a class="nav-link js-scroll-trigger" href="index.html#about">About</a></li>
+          <li class="nav-item"><a class="nav-link js-scroll-trigger" href="index.html#paper">Paper</a></li>
           <li class="nav-item"><a class="nav-link js-scroll-trigger" href="data_analysis.html">Data Analysis</a></li>
+          <li class="nav-item"><a class="nav-link js-scroll-trigger" href="data_download.html">Download</a></li>
           <li class="nav-item"><a class="nav-link js-scroll-trigger active" href="data_example.html">Explore</a></li>
           <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://github.com/ShuangLI59/weakly-supervised-human-object-detection-video">Code</a></li>
+          <li class="nav-item"><a class="nav-link js-scroll-trigger" href="index.html#team">Team</a></li>
         </ul>
     </div>
       </div>
