--- a/data_analysis.html
+++ b/data_analysis.html
@@ -46,9 +46,8 @@
   </nav>
 
   <section class="head">
-  <div class="row">
-      <div class="col-sm-2"></div>
-      <div class="col-sm-10">
+  <div class="container bar-container">
+      <div class="col-md-12 mx-auto">
       <ul class="nav nav-tabs" role="tablist">
         <li class="nav-item"><a class="nav-link js-scroll-trigger active overview-button" href="javascript:;" onClick="showOverview();">Overview</a></li>
         <li class="nav-item"><a class="nav-link js-scroll-trigger triplets-button" href="javascript:;"  onClick="showTriplet();">Triplets</a></li>
